# Docling_pdf2markdown

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  create_test_docx.py  docker-compose.yml  pyproject.toml
docs/: FEATURES.md  MARKDOWN_SPEC.md  docling_pdf_sample.py  overview.md  pytest_exec.md  samples.md
scripts/: create_samples.py  verify_real_data.py
src/docling_lib/: __init__.py  cli.py  config.py  converter.py  extraction.py  refinement.py  server.py  utils.py
test_output_verification/1706.03762/: processed_document.md
test_output_verification/2406.12430/: processed_document.md
test_output_verification/real_sample/: processed_document.md
test_output_verification/test_document/: processed_document.md
test_output_verification/word_sample/: processed_document.md
tests/: conftest.py  download_samples.py  test_cli.py  test_config.py  test_converter.py  test_download_security.py  test_extraction.py  test_extraction_design.md  test_image_traversal.py  test_path_traversal.py  test_refinement.py  test_refinement_design.md  test_security.py  test_server.py  test_table_serialization.py  test_vulnerability.py  verify_log_injection_fix.py
tests/test_data/: .gitignore  meti_gattai_matrix.xlsx  meti_gijutsu_matrix.xlsx  real_sample.pptx  real_sample.xlsx  test_document.docx
