[project]
name = "docling_lib"
version = "0.1.0"
description = "A library to generate markdown with embedded figures from PDF files."
requires-python = ">=3.11, <4.0"
dependencies = [
    "docling",
    "docling-core",
    "openai",
    "requests",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.scripts]
pdf2md_cli = "docling_lib.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "requests",
    "httpx",
]

[tool.deptry]
exclude = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]