[project]
name = "docling_lib"
version = "0.1.0"
description = "A library to generate markdown with embedded figures from PDF files."
requires-python = ">=3.11, <4.0"
dependencies = [
    "docling>=2.0.0",
]

[project.scripts]
pdf2md_cli = "docling_lib.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.deptry]
exclude = ["pytest", "pytest-cov"]