[project]
name = "docling_lib"
version = "0.1.0"
description = "A library to generate markdown with embedded figures from PDF files."
requires-python = ">=3.11, <4.0"
dependencies = [
    "docling",
    "docling-core",
]

[project.scripts]
pdf2md_cli = "docling_lib.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "requests>=2.31.0,<3.0.0",
]

[tool.deptry]
exclude = ["pytest", "pytest-cov"]
